# dotfiles

./: setup.sh
fish/: config.fish
mise/: config.toml
nvim/: init.lua  lazy-lock.json
nvim/lua/: .luarc.json  base.lua
nvim/lua/plugins/: .luarc.json  avante.lua  blink-cmp.lua  bufferline.lua  chatgpt.lua  cmp-tabnine.lua  cmp.lua  codecompanion.lua  colorful-menu.lua  colorizer.lua  comment.lua  conform.lua  context_vt.lua  dashboard.lua  diaglist.lua  diffview.lua  dressing.lua  fidget.lua  gitsigns.lua  hlchunk.lua  hop.lua  illuminate.lua  indent-blankline.lua  lspsaga.lua  lualine.lua  markdown.lua  mason-lspconfig.lua  mason.lua  mcphub.lua  mini-animate.lua  mini-icons.lua  nerdy.lua  noice.lua  nord.lua  nordic.lua  notify.lua  nvim-autopairs.lua  nvim-lspconfig.lua  nvim-tree.lua  nvimlint.lua  (+13 more)
nvim/py3nvim/: pyproject.toml
starship/: starship.toml
tmux/: tmux.conf
wez/: wezterm.lua
