[project]
name = "py3nvim"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lapis-kasen", email = "neptune.mk2@gmail.com" }
]
dependencies = [
    "neovim>=0.3.1",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py3nvim"]
